  worked upon later.

28/09/2001
- Client bug fixed (peruse file overlay) Usually caused by lag.
  Common symptom, the player list appears on game screen.


28/09/2001 - Client changes (Zz)
- Now you can specify an argument in Windows and client will connect 
  directly bypassing meta server (previously this only worked for Unix clients)
- Multiple colors for different types of messages in recall window 
  (death, kill, private messages, etc.)
- CTRL-O works like CTRL-P except only shows important messages - good 
  for review after a long fight or long AFK

29/09/2001
- Target friendly bug fixed - player in own party was used ;)
- Colour messaging added - should work with all message types.

01/10/2001
- Golem following/guard bug fixed. Golem will now follow down/up
  stairs regardless of guard.
- Other bugs identified (unfixed) Target friendly with golem causes
  chaos. The golem attacks nearest player, kills then homes in on the ghost.
  Also, swapping places with the golem causes problems. (Urgent fix)

02/10/2001
- Object ownership made invalid now after player ghost death. It was
  recycling ownership. It is set to MAX_ID+1.
- Annoying level 1 suicides are no longer shown.

03/10/2001
- A couple of bug fixes, and some debug stuff removed (mine)
- Fixed golem change places with owner.
- Life scroll now shows life returning (lite_spot)

04/10/2001
- Console password request fixed (in line with client)
- Male/female differentiation in public chat.

05/10/2001
- Server admin messages fixed (in yellow, after I broke them)
- Removed the male/female colours. Admin still yellow

08/10/2001
- Minor bug fixed in house creation

23/10/2001
- Confusion brand PvP bug fixed ;)
- Wraith in own houses added. Tested, no bugs seen.

24/10/2001
- Fixed MAJOR house security bug.
- Fixed bug in savefile delete - party, houses were not reset.

25/10/2001
- The previous bugfix (timeout player) now works.

27/10/2001
- Fixed the archer spells bugs